--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Template</title>
     <link rel="stylesheet" href="dist/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -69,6 +70,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn"><i class="fa fa-twitter"></i> Twitter</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl2.jpg" alt="" class="card__image">
@@ -76,13 +78,14 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl3.jpg" alt="" class="card__image">
                     <h2 class="card__title">Name</h2>
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
-                        similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
-                        vero, perspiciatis in.</p>
+                        similique. Voluptate </p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl4.jpg" alt="" class="card__image">
@@ -90,6 +93,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl5.jpg" alt="" class="card__image">
@@ -97,6 +101,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl6.jpg" alt="" class="card__image">
@@ -104,6 +109,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl1.jpg" alt="" class="card__image">
@@ -111,6 +117,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl2.jpg" alt="" class="card__image">
@@ -118,6 +125,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl3.jpg" alt="" class="card__image">
@@ -125,6 +133,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl4.jpg" alt="" class="card__image">
@@ -132,6 +141,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl5.jpg" alt="" class="card__image">
@@ -139,6 +149,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl6.jpg" alt="" class="card__image">
@@ -146,6 +157,7 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
                 <div class="card">
                     <img src="src/images/girl1.jpg" alt="" class="card__image">
@@ -153,6 +165,15 @@
                     <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
                         similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
                         vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
+                </div>
+                <div class="card">
+                    <img src="https://placeimg.com/300/300/people?1" alt="" class="card__image">
+                    <h2 class="card__title">Name</h2>
+                    <p class="card__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorum, in a veniam sint minus
+                        similique. Voluptate maxime veniam cupiditate ratione nemo nesciunt dolorum, quisquam explicabo magni
+                        vero, perspiciatis in.</p>
+                    <button type="button" class="btn">Click Me!</button>
                 </div>
             </div>
 
